--- a/catalogue/eurostat/geoprocessed-eurostat-mortality/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-mortality/__item__.yaml
@@ -13,8 +13,8 @@ bbox:
 - 44.9
 - 73.9
 properties:
-  start_datetime: '2015-01-05T00:00:00Z'
-  end_datetime: '2023-09-11T00:00:00Z'
+  start_datetime: '2000-01-03T00:00:00Z'
+  end_datetime: '2023-10-30T00:00:00Z'
   dc:abstract: Europe Eurostat mortality data from 2015 to 2019
   dc:access_rights: charges apply
   dc:title: Eurostat mortality data over Europe
@@ -25,7 +25,25 @@ properties:
   - geoprocessed
   - geospatial
   cube:variables:
-    mortality_Y_GE65:
+    L0_NR_T_Y65_69:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    L1_NR_T_Y65_69:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    L2_NR_T_Y65_69:
+      dimensions:
+      - time
+      - lat
+      - lon
+      type: data
+    L3_NR_T_Y65_69:
       dimensions:
       - time
       - lat
@@ -54,6 +72,6 @@ assets:
     roles:
     - thumbnail
   data:
-    href: s3://eurostat/eurostat-mortality-2015-2023.zarr
+    href: s3://eurostat/demo_r_mweek3-20000103-20231030.zarr
     roles:
     - data
