--- a/catalogue/eurostat/geoprocessed-eurostat-regional-economic-accounts_nama_10r_3gdp/config.ini
+++ b/catalogue/eurostat/geoprocessed-eurostat-regional-economic-accounts_nama_10r_3gdp/config.ini
@@ -1,7 +1,7 @@
 [Data]
 
 # Code of the EUROSTAT table
-TABLE_CODE = nama10r_3gdp
+TABLE_CODE = nama_10r_3gdp
 
 # The level of NUTS data to be used. From 0 to 3.
 NUTS_LEVEL = 0,1,2,3
