--- a/catalogue/eurostat/geoprocessed-eurostat-mortality-demo_r_mweek3/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-mortality-demo_r_mweek3/__item__.yaml
@@ -15,7 +15,7 @@ bbox:
 properties:
   start_datetime: '2000-01-03T00:00:00Z'
   end_datetime: '2023-10-30T00:00:00Z'
-  dc:abstract: Europe Eurostat mortality data from 2015 to 2019
+  dc:abstract: Europe Eurostat mortality data
   dc:access_rights: charges apply
   dc:title: Eurostat mortality data over Europe
   dc:subject:
@@ -68,7 +68,7 @@ providers:
   url: https://www.mundialis.de/
 assets:
   thumbnail:
-    href: https://apps.mundialis.de/thumbnails/3/thumbnail.png
+    href: https://apps.mundialis.de/bopen_hedp/thumbnails/demo_r_mweek3-20000103-20231030.png
     roles:
     - thumbnail
   data:
