update pop density code

--- a/catalogue/eurostat/geoprocessed-eurostat-population-density-demo_r_d3dens/config.ini
+++ b/catalogue/eurostat/geoprocessed-eurostat-population-density-demo_r_d3dens/config.ini
@@ -1,7 +1,7 @@
 [Data]
 
 # Code of the EUROSTAT table
-TABLE_CODE = demo_r_pjanaggr3
+TABLE_CODE = demo_r_d3dens
 
 # The level of NUTS data to be used. From 0 to 3.
 NUTS_LEVEL = 0,1,2,3
