--- a/catalogue/eurostat/geoprocessed-eurostat-final-energy-consumption_sdg_07_11/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-final-energy-consumption_sdg_07_11/__item__.yaml
@@ -47,6 +47,7 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+license: CC-BY-4.0 - Contains modified Eurostat data – created by mundialis
 providers:
 - name: EUROSTAT
   roles:
