--- a/catalogue/eurostat/geoprocessed-eurostat-population-density-demo_r_d3dens/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-population-density-demo_r_d3dens/__item__.yaml
@@ -53,6 +53,7 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
+license: CC-BY-4.0 - Contains modified Eurostat data – created by mundialis
 providers:
 - name: EUROSTAT
   roles:
