--- a/catalogue/eurostat/geoprocessed-eurostat-mortality-demo_r_mweek3/ingestion/config.ini
+++ b/catalogue/eurostat/geoprocessed-eurostat-mortality-demo_r_mweek3/ingestion/config.ini
@@ -15,4 +15,5 @@ TEMP_DIR = /grassdb/temp_dir
 # Output S3 bucket or local folder
 OUTPUT_DIR = s3://eurostat
 
+# Eurostat dimensions to filter for
 COL_TO_FILTER = sex=T,age=Y70-74
