--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -35,10 +35,12 @@ properties:
       type: spatial
       axis: y
       reference_system: 4326
+      step: 0.1
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
+      step: 0.1
   cube:variables:
     t2m:
       dimensions:
