--- a/catalogue/eurostat/geoprocessed-eurostat-animal-populations-agr_r_animal/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-animal-populations-agr_r_animal/__item__.yaml
@@ -1,5 +1,5 @@
 links:
-- title: Eurostat
+- title: Animal Production Statistics
   rel: derived_from
   href: https://ec.europa.eu/eurostat/cache/metadata/en/apro_anip_esms.htm
   type: text/html
@@ -876,21 +876,7 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
-license: "CC-BY-4.0 - Contains modified Eurostat data \u2013 created by mundialis"
-providers:
-- name: EUROSTAT
-  roles:
-  - producer
-  - licensor
-  url: https://ec.europa.eu/eurostat/web/main/home
-- name: B-Open
-  roles:
-  - host
-  url: https://www.bopen.eu/
-- name: mundialis GmbH & Co. KG
-  roles:
-  - processor
-  url: https://www.mundialis.de/
+
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/agr_r_animal-19770101-20230101.png
