--- a/catalogue/eurostat/geoprocessed-eurostat-cooling-heating-degree-days-nrg_chddr2_a/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-cooling-heating-degree-days-nrg_chddr2_a/__item__.yaml
@@ -1,5 +1,5 @@
 links:
-- title: Eurostat
+- title: Energy statistics - cooling and heating degree days
   rel: derived_from
   href: https://ec.europa.eu/eurostat/cache/metadata/en/nrg_chdd_esms.htm
   type: text/html
@@ -79,21 +79,8 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
-license: "CC-BY-4.0 - Contains modified Eurostat data \u2013 created by mundialis"
-providers:
-- name: EUROSTAT
-  roles:
-  - producer
-  - licensor
-  url: https://ec.europa.eu/eurostat/web/main/home
-- name: B-Open
-  roles:
-  - host
-  url: https://www.bopen.eu/
-- name: mundialis GmbH & Co. KG
-  roles:
-  - processor
-  url: https://www.mundialis.de/
+
+
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/nrg_chddr2_a-19790101-20220101.png
