--- a/catalogue/eurostat/geoprocessed-eurostat-final-energy-consumption_sdg_07_11/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-final-energy-consumption_sdg_07_11/__item__.yaml
@@ -1,5 +1,5 @@
 links:
-- title: Eurostat
+- title: Final energy consumption
   rel: derived_from
   href: https://ec.europa.eu/eurostat/cache/metadata/en/sdg_07_11_esmsip2.htm
   type: text/html
@@ -47,21 +47,7 @@ properties:
     spatial_ref:
       dimensions: []
       type: data
-license: "CC-BY-4.0 - Contains modified Eurostat data \u2013 created by mundialis"
-providers:
-- name: EUROSTAT
-  roles:
-  - producer
-  - licensor
-  url: https://ec.europa.eu/eurostat/web/main/home
-- name: B-Open
-  roles:
-  - host
-  url: https://www.bopen.eu/
-- name: mundialis GmbH & Co. KG
-  roles:
-  - processor
-  url: https://www.mundialis.de/
+
 assets:
   thumbnail:
     href: https://apps.mundialis.de/bopen_hedp/thumbnails/sdg_07_11-20000101-20210101.png
