--- a/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
+++ b/catalogue/cmems-reanalysis/cmems_mod_glo_phy_my_0.083_P1D-m/__item__.yaml
@@ -33,10 +33,12 @@ properties:
       type: spatial
       axis: y
       reference_system: 4326
+      step: 0.083
     longitude:
       type: spatial
       axis: x
       reference_system: 4326
+      step: 0.083
   cube:variables:
     mlotst:
       dimensions:
