--- a/catalogue/cmems-reanalysis/__collection__.yaml
+++ b/catalogue/cmems-reanalysis/__collection__.yaml
@@ -2,9 +2,9 @@ title: Global Ocean Physics Reanalysis
 dc:abstract: The GLORYS12V1 product is the CMEMS global ocean eddy-resolving (1/12° horizontal resolution, 50 vertical levels) reanalysis covering the altimetry (1993 onward).
 
 links:
-- title: Copernicus Marine Service documentation
+- title: Global Ocean Reanalysis
   rel: derived_from
-  href: https://marine.copernicus.eu/resources/documentation
+  href: https://data.marine.copernicus.eu/product/GLOBAL_MULTIYEAR_PHY_001_030/description
   type: text/html
 - title: Licence to use Copernicus products
   rel: license
